# ignite-test-qoute-flow

./: .cursorignore  .dockerignore  .env.example  .gitignore  .npmrc  .prettierignore  .prettierrc.json  AGENTS.md  APPROACH.md  Makefile  README.md  REVIEWER.md  Technical-Test.md  ai-notes.md  compose.prod.yaml  compose.yaml  gluestack-ui.config.json  package.json  pnpm-lock.yaml  skills-lock.json  turbo.json
.agents/: README.md
.cursor/: README.md
.cursor/rules/: ai-behaviour.mdc  backend-python.mdc  code-quality.mdc  git-workflow.mdc  gluestack-ui.mdc  nextjs-web.mdc  packages-ui.mdc  project-core.mdc  security.mdc  styling-ssr.mdc  technical-test.mdc  turbo-monorepo.mdc  typescript.mdc  web-platform-forks.mdc
.github/workflows/: ci.yml
apps/apis/: .dockerignore  .env.example  Dockerfile  Dockerfile.prod  alembic.ini  main.py  pyproject.toml
apps/apis/app/helpers/: __init__.py  quotation.py  response.py
apps/apis/app/http/: __init__.py
apps/apis/app/http/controllers/: __init__.py  ai.py  auth.py  client.py  quotation.py
apps/apis/app/http/dtos/: ai.py  ai_usage.py  auth.py  client.py  pagination.py  quotation.py  response.py
apps/apis/app/models/: __init__.py  ai_log.py  base.py  client.py  login_attempt.py  quotation.py  quotation_item.py  user.py
apps/apis/app/repositories/: __init__.py  ai_log.py  base.py  client.py  client_repository.py  login_attempt.py  quotation.py  user.py
apps/apis/app/services/: __init__.py  ai.py  ai_usage.py  auth.py  client.py  login_rate_limit.py  n8n.py  quotation.py
apps/apis/bootstrap/: __init__.py  app.py
apps/apis/config/: __init__.py  dependencies.py  exceptions.py  security.py  settings.py
apps/apis/database/: __init__.py  connection.py  migrate.py  seed.py
apps/apis/database/migrations/: env.py
apps/apis/database/migrations/versions/: 001_create_users_table.py  002_create_clients_table.py  003_create_quotations_table.py  004_create_ai_logs_table.py  005_create_quotation_items_table.py  006_drop_quotations_items_json.py  007_add_ai_log_user_id.py  008_create_login_attempts_table.py
apps/apis/database/seeders/: __init__.py  base.py  user.py
apps/apis/prompts/: quotation-draft.md
apps/apis/routes/: __init__.py  api.py
apps/apis/tests/: conftest.py  test_ai_service.py  test_ai_usage.py  test_api_auth.py  test_api_clients.py  test_api_quotations.py  test_helpers_quotation.py
apps/docs/: Dockerfile  Dockerfile.prod  nginx.conf  package.json
apps/web/: .gitignore  Dockerfile  Dockerfile.prod  eslint.config.mjs  (+5 more)
n8n/: README.md  build-email.js  credentials.json  docker-entrypoint.sh  quotation-approved.json
scripts/: format-python-staged.sh  validate.sh
(+56 files in other folders)
